--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JAVASCRIPT-FUNCTIONS</title>
   </head>
   <body>
+    <h1>JavaScript-Knowledge</h1>
     <script src="./script.js"></script>
   </body>
 </html>
