--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>JavaScript-Knowledge</h1>
+    <p class="demo"></p>
     <script src="./script.js"></script>
   </body>
 </html>
