--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JAVASCRIPT-FUNCTIONS</title>
   </head>
   <body>
-    <h1>JavaScript-Knowledge</h1>
+    <h1>JavaScript Functions</h1>
     <p class="demo"></p>
     <script src="./script.js"></script>
   </body>
